Fix bullets not showing on JS disabled info paragraph
The bullets were not painting because they were outside of the lis and
the li were set to contain: content.

--- a/src/viewer.css
+++ b/src/viewer.css
@@ -3,6 +3,12 @@
     contain: content;
 }
 
+li {
+    /* We cannot set contain: content for li because it paints the marker
+       ouside of the element. */
+    contain: layout;
+}
+
 html, h1, h2, p, ul {
     margin: 0;
 }
